# onetime-rs

./: .gitignore  docker-compose.yml
onetime-frontend/: index.html  package-lock.json  package.json
onetime-frontend/src/: App.vue
onetime-frontend/src/components/: CreateSecret.vue  GetSecret.vue  OneTime.vue
onetime-frontend/src/services/: SecretService.js
onetime-rs/: Cargo.toml
onetime-rs/src/: controller.rs  main.rs  model.rs  payload.rs
